Replace raw foreign key value in reviews with primary descriptors

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -19,7 +19,7 @@
 
       <% @reviews.each do |review| %>
       <tr>
-        <td><%= review.user_id %></td>
+        <td><%= review.user.first_name %></td>
         <td><%= review.star %></td>
         <td><%= review.content %></td>
         <td><%= review.photo %></td>
