--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= review.star %></td>
         <td><%= review.content %></td>
         <td><%= review.photo %></td>
-        <td><%= review.restaurant_id %></td>
+        <td><%= review.restaurant.name %></td>
         <td>
           <a href="/reviews/<%= review.id %>" class="btn btn-primary">Show</a>
           <a href="/reviews/<%= review.id %>/edit" class="btn btn-warning">Edit</a>
