Replace foreign key text inputs in reviews with dropdowns

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -60,7 +60,7 @@
           Restaurant
         </label>
 
-        <input type="text" id="restaurant_id" name="restaurant_id" placeholder="Restaurant" class="form-control" value="<%= @review.restaurant_id %>">
+        <%= select_tag(:restaurant_id, options_from_collection_for_select(Restaurant.all, :id, :name, @review.restaurant_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
