Implement image uploads

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
         <td><%= restaurant.tags %></td>
-        <td><%= restaurant.cover_photo %></td>
+        <td><img src='<%= restaurant.cover_photo %>' class='img-responsive'></td>
         <td><%= restaurant.description %></td>
         <td><%= restaurant.restaurant_id %></td>
         <td>
