--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -15,7 +15,7 @@
       <dd><%= @restaurant.tags %></dd>
 
       <dt>Cover photo</dt>
-      <dd><%= @restaurant.cover_photo %></dd>
+      <dd><img src="<%= @restaurant.cover_photo %>" class="img-responsive"></dd>
 
       <dt>Description</dt>
       <dd><%= @restaurant.description %></dd>
