--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/update_review/<%= @review.id %>" method="post">
+    <form action="/update_review/<%= @review.id %>" method="post" enctype="multipart/form-data">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -51,7 +51,8 @@
           Photo
         </label>
 
-        <input type="text" id="photo" name="photo" placeholder="Photo" class="form-control" value="<%= @review.photo %>">
+        <%= cl_image_tag(@review.photo.to_s, :width => 90, :height => 90, :crop => :thumb) %>
+        <input type="file" id="photo" name="photo" class="form-control">
       </div>
 
       <!-- Label and input for restaurant_id -->
