--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -15,7 +15,7 @@
       <dd><%= @review.content %></dd>
 
       <dt>Photo</dt>
-      <dd><%= @review.photo %></dd>
+      <dd><img src="<%= @review.photo %>" class="img-responsive"></dd>
 
       <dt>Restaurant</dt>
       <dd><%= @review.restaurant_id %></dd>
