--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/create_review" method="post">
+    <form action="/create_review" method="post" enctype="multipart/form-data">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
@@ -51,7 +51,7 @@
           Photo
         </label>
 
-        <input type="text" id="photo" name="photo" placeholder="Photo" class="form-control" value="<%= @review.photo %>">
+        <input type="file" id="photo" name="photo" class="form-control">
       </div>
 
       <!-- Label and input for restaurant_id -->
