--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,7 +9,11 @@
       <dd><%= @restaurant.name %></dd>
 
       <dt>Address</dt>
-      <dd><%= @restaurant.address %></dd>
+      <dd>
+        <div>
+          <div id="location_map" style="height: 480px;"></div>
+        </div>
+      </dd>
 
       <dt>Tags</dt>
       <dd><%= @restaurant.tags %></dd>
@@ -119,3 +123,21 @@
     </ul>
   </div>
 </div>
+
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @restaurant.address_latitude %>,
+        "lng": <%= @restaurant.address_longitude %>,
+        "infowindow": "<h5><%= @restaurant.created_at %></h5><small><%= @restaurant.address_formatted_address %></small>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
