--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @review.user_id %></dd>
+      <dd>
+        <% if @review.user.present? %>
+          <a href="/users/<%= @review.user_id %>">
+            <%= @review.user.first_name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Star</dt>
       <dd><%= @review.star %></dd>
@@ -18,7 +24,13 @@
       <dd><img src="<%= @review.photo %>" class="img-responsive"></dd>
 
       <dt>Restaurant</dt>
-      <dd><%= @review.restaurant_id %></dd>
+      <dd>
+        <% if @review.restaurant.present? %>
+          <a href="/restaurants/<%= @review.restaurant_id %>">
+            <%= @review.restaurant.name %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
